# ton-language-server

./: .c8rc.json  .editorconfig  .gitattributes  .gitignore  .prettierignore  .vscodeignore  .yarnrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-extension.md  README.md  eslint.config.mjs  jest.config.js  package.json  package.server.json  stylelint.config.mjs  tsconfig.json  vitest.config.ts  webpack.config.js
server/src/languages/fift/tree-sitter-fift/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-fift.wasm  tree-sitter.json
server/src/languages/fift/tree-sitter-fift/bindings/c/: tree-sitter-fift.pc.in
server/src/languages/fift/tree-sitter-fift/bindings/go/: binding.go  binding_test.go
server/src/languages/fift/tree-sitter-fift/bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
server/src/languages/fift/tree-sitter-fift/bindings/python/tests/: test_binding.py
server/src/languages/fift/tree-sitter-fift/bindings/python/tree_sitter_fift/: __init__.py  binding.c
server/src/languages/fift/tree-sitter-fift/bindings/rust/: build.rs  lib.rs
server/src/languages/fift/tree-sitter-fift/bindings/swift/TreeSitterFift/: fift.h
server/src/languages/fift/tree-sitter-fift/bindings/swift/TreeSitterFiftTests/: TreeSitterFiftTests.swift
server/src/languages/fift/tree-sitter-fift/src/: grammar.json  node-types.json  parser.c
server/src/languages/func/tree-sitter-func/: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-func.wasm  tree-sitter.json
server/src/languages/func/tree-sitter-func/bindings/c/: tree-sitter-func.pc.in
server/src/languages/func/tree-sitter-func/bindings/go/: binding.go  binding_test.go
server/src/languages/func/tree-sitter-func/bindings/node/: binding.cc  index.d.ts  index.js
server/src/languages/func/tree-sitter-func/bindings/python/tests/: test_binding.py
server/src/languages/func/tree-sitter-func/bindings/python/tree_sitter_func/: __init__.py  binding.c
server/src/languages/func/tree-sitter-func/bindings/rust/: build.rs  lib.rs
server/src/languages/func/tree-sitter-func/bindings/swift/TreeSitterFunc/: func.h
server/src/languages/func/tree-sitter-func/bindings/swift/TreeSitterFuncTests/: TreeSitterFuncTests.swift
server/src/languages/func/tree-sitter-func/src/: grammar.json  node-types.json  parser.c
server/src/languages/tlb/tree-sitter-tlb/: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter-tlb.wasm  tree-sitter.json
server/src/languages/tlb/tree-sitter-tlb/bindings/c/: tree-sitter-tlb.pc.in
server/src/languages/tlb/tree-sitter-tlb/bindings/go/: binding.go  binding_test.go
server/src/languages/tlb/tree-sitter-tlb/bindings/node/: binding.cc  index.d.ts  index.js
server/src/languages/tlb/tree-sitter-tlb/bindings/python/tests/: test_binding.py
server/src/languages/tlb/tree-sitter-tlb/bindings/python/tree_sitter_tlb/: __init__.py  (+1 more)
server/src/languages/tlb/tree-sitter-tlb/bindings/rust/: build.rs  lib.rs
server/src/languages/tlb/tree-sitter-tlb/src/: grammar.json  node-types.json  parser.c
(+743 files in other folders)
