[package]
name = "tree-sitter-fift"
description = "A tree-sitter grammar for the Fift assembly programming language"
version = "0.1.0"
authors = ["Petr Makhnef <mr.makhneff@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fift"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ton-blockchain/ton-language-server"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.0"
